# COSC363

Assignment 1/: CMakeLists.txt  COSC363Ass01.cpp  floorPattern.tga  floorTile.tga  illusionOne.tga  illusionTwo.tga  moirepattern.tga  podiumFrame.tga  skyBackground.tga  woodplank.tga
Assignment 2/: Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  RayTracer.cpp
